--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <!--<link th:href="@{/css/style.css}" rel="styleSheet">-->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script th:src="@{/js/delete.js}"></script>
     <title>TOP</title>
 </head>
 <body>
@@ -26,6 +28,12 @@
         </div>
         <div class="date">
             タスク期限 : <span th:text="${#temporals.format(task.limitDate, 'yyyy/MM/dd')}"/>
+        </div>
+        <div class="delete-button">
+            <form th:action="@{/delete/{id}(id=${task.id})}" th:method="delete">
+                <input name="content" th:value="${task.content}" type="hidden"/>
+                <input class="delete" type="submit" value="削除"/>
+            </form>
         </div>
     </div>
 </div>
