--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -18,7 +18,17 @@
             タスク : <span th:text="${task.content}"/>
         </div>
         <div class="content">
-            ステータス : <span th:text="${task.status}"/>
+            ステータス :
+            <form th:action="@{/update-Status/{id}(id=${task.id})}" th:method="put">
+                <select name="status" >
+                    <option value="1" th:selected="${task.status == 1}">未着手</option>
+                    <option value="2" th:selected="${task.status == 2}">実行中</option>
+                    <option value="3" th:selected="${task.status == 3}">ステイ中</option>
+                    <option value="4" th:selected="${task.status == 4}">完了</option>
+                </select>
+                <input type="submit" value="変更">
+            </form>
+
         </div>
         <div class="date">
             タスク期限 : <span th:text="${#temporals.format(task.limitDate, 'yyyy/MM/dd HH:mm:ss')}"/>
