--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -25,9 +25,7 @@
         </div>
         <input type="submit" value="追加">
     </form>
-    <form action="/">
-        <input type="submit" value="戻る"/>
-    </form>
+    <a th:href="@{/}">戻る</a>
 </div>
 </body>
 </html>
