--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -44,6 +44,11 @@
                   th:style="${task.limitDate > now} ? 'background-color:yellow' : 'background-color:red'"/>
             -->
         </div>
+        <div class="edit-button">
+            <a th:href="@{/edit/{id}(id=${task.id})}">
+                <input type="button" value="編集">
+            </a>
+        </div>
         <div class="delete-button">
             <form th:action="@{/delete/{id}(id=${task.id})}" th:method="delete">
                 <input name="content" th:value="${task.content}" type="hidden"/>
