--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -20,6 +20,25 @@
     <a href="/new">
         <button class="new-button" type="button">新規タスク</button>
     </a>
+    <div class="filter-icon">
+        <form method="get">
+            期限
+            <input name="start" type="date"/>
+            ～
+            <input name="end" type="date"/>
+            ステータス
+            <select name="status">
+                <option value="">すべて</option>
+                <option value="1">未着手</option>
+                <option value="2">実行中</option>
+                <option value="3">ステイ中</option>
+                <option value="4">完了</option>
+            </select>
+            タスク内容
+            <textarea name="content"></textarea>
+            <input type="submit" value="絞込" />
+        </form>
+    </div>
     <div class="task-icon" th:each="task : ${tasks}">
         <div class="content">
             タスク内容 : <span th:text="${task.content}"/>
